# opengl_practice

./: CMakeLists.txt  Mesh.h  main.cpp
include/: App.h  Camera.h  CubeMesh.h  Light.h  Mesh.h  MeshFacility.h  Object.h  ResourceManager.h  Resources.h  Scene.h  Shader.h  Skybox.h  Sphere.h  Terrain.h  Texture.h  Tower.h  Water.h  Window.h  cubeMesh.h  lightScene.h  notLightScene.h  particleGenerator.h
include/glad/: glad.h
resources/models/: ufo.blend  ufo.mtl
resources/shaders/: box.frag  cube.frag  default.vert  photocube.vert  skybox.vert  terrain.frag  terrain.vert  water.frag  water.vert
shaders/: Light.h  box.frag  box.vert  color.frag  cube.vert  default.vert  defaut.frag  empty.frag  outline.vert  photocube.frag  photocube.vert  shader.vert  tower.frag
src/: ResourceManager.cpp  Resources.cpp  Sphere.cpp  Texture.cpp  glad.c  particleGenerator.cpp
